--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-image: url("{{ url_for('static', filename='background.jpg') }}");
+            background-image: url("background.jpg");
             background-size: cover;
             background-position: center;
         }
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div>
-        <img id="valentineImage" src="{{ url_for('static', filename='mymelody.png') }}" alt="Valentine's Day">
+        <img id="valentineImage" src="mymelody.png" alt="Valentine's Day">
         <h1 id="question">Quieres ser mi Valentin's Date?</h1>
         <div id="buttonContainer">
             <button id="yesButton" onclick="showMessage('Gracias! Será aquí')">Si uwu</button>
@@ -66,5 +66,3 @@
     </script>
 </body>
 </html>
-
-
